crates/evalcore-report/src/snapshots/evalcore_report__tests__junit_report_snapshot.snap
---
source: crates/evalcore-report/src/lib.rs
expression: junit(&fixture())
---
<?xml version="1.0" encoding="UTF-8"?>
<testsuites tests="3" failures="2">
  <testsuite name="evalcore" tests="3" failures="2">
    <testcase name="refund-1" time="0.012"/>
    <testcase name="refund-2" time="0.040">
      <failure message="contains: expected output to contain &quot;refund&quot; &amp; &lt;more&gt;"/>
    </testcase>
    <testcase name="boom" time="0.000">
      <failure message="target error: connection refused"/>
    </testcase>
  </testsuite>
</testsuites>
