crates/evalcore-report/src/snapshots/evalcore_report__tests__terminal_report_snapshot.snap
---
source: crates/evalcore-report/src/lib.rs
expression: terminal(&fixture())
---
PASS refund-1 (12ms)
FAIL refund-2
     contains: expected output to contain "refund" & <more>
FAIL boom
     target error: target error: connection refused

1 passed, 2 failed, 3 total · 210 tokens · $0.0020
