crates/evalcore-report/src/snapshots/evalcore_report__tests__terminal_report_with_gates_snapshot.snap
---
source: crates/evalcore-report/src/lib.rs
expression: terminal(&fixture_with_gates())
---
PASS refund-1 (12ms)
FAIL refund-2
     contains: expected output to contain "refund" & <more>
FAIL boom
     target error: target error: connection refused

1 passed, 2 failed, 3 total · 210 tokens · $0.0020
GATE PASS pass_rate >= 0.3 (actual 0.33)
GATE FAIL mean_score(contains) >= 0.8 (actual 0.50)
GATE FAIL mean_score(judge) >= 0.7 (actual 0.00)
     no scores from scorer "judge"
